--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./src/css/reset.css">
+    <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="stylesheet" href="./src/css/responsive.css">
     <link rel="shortcut icon" href="./src/images/favicon-32x32.png" type="image/x-icon">
     <title>Document</title>
 </head>
+
 <body>
     <main class="container">
         <div class="card">
-            <img src="./src/images/image-equilibrium.jpg" alt="NFT-Image">
-            <h1>Equilibrium #3429</h1>
-            <p>Our Equilibrium collection promotes balance and calm.</p>
-            <div>
-                <div class="price">
+            <img class="nft" src="./src/images/image-equilibrium.jpg" alt="NFT-Image">
+            <a href="#" class="titulo" target="_blank">Equilibrium #3429</a>
+            <p class="descricao">Our Equilibrium collection promotes balance and calm.</p>
+            <div class="info">
+                <div class="price gap">
                     <img src="./src/images/icon-ethereum.svg" alt="ethereum">
                     <p>0.041 ETH</p>
                 </div>
-                <div class="time-left">
+                <div class="time-left gap">
                     <img src="./src/images/icon-clock.svg" alt="clock">
                     <p>3 days left</p>
                 </div>
             </div>
+            <hr>
             <div class="owner">
                 <img src="./src/images/image-avatar.png" alt="avatar">
-                <p>Creation of Jules Wyvern</p>
+                <p>Creation of <a href="#" target="_blank">Jules Wyvern</a></p>
             </div>
         </div>
     </main>
 </body>
+
 </html>
