--- a/index.html
+++ b/index.html
@@ -9,13 +9,18 @@
     <link rel="stylesheet" href="./src/css/style.css">
     <link rel="stylesheet" href="./src/css/responsive.css">
     <link rel="shortcut icon" href="./src/images/favicon-32x32.png" type="image/x-icon">
-    <title>Document</title>
+    <title>Frontend Mentor | NFT preview card component</title>
 </head>
 
 <body>
     <main class="container">
         <div class="card">
-            <img class="nft" src="./src/images/image-equilibrium.jpg" alt="NFT-Image">
+            <div class="image">
+                <img class="nft"src="./src/images/image-equilibrium.jpg" alt="NFT-Image">
+                <div>
+                    <img src="./src/images/icon-view.svg">
+                </div>
+            </div>
             <a href="#" class="titulo" target="_blank">Equilibrium #3429</a>
             <p class="descricao">Our Equilibrium collection promotes balance and calm.</p>
             <div class="info">
